// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`для владельца если объява не активна покажет только дату создания 1`] = `
<div
  className="CardDatesAndStats"
>
  <div
    className="CardDatesAndStats__item CardDatesAndStats__item_creationDate"
    key="creation_date"
    title="Дата размещения объявления 11 апреля, Москва"
  >
    <span
      className="CardDatesAndStats__creationDateText"
    >
      11 апреля
      , Москва
    </span>
  </div>
</div>
`;

exports[`для владельца если у объявы есть добавления в избранное покажет их кол-во 1`] = `
<div
  className="CardDatesAndStats"
>
  <div
    className="CardDatesAndStats__item CardDatesAndStats__item_favorites"
    key="favorites"
    title="Количество добавлений в избранное"
  >
    <IconSvg
      id="svgID"
      size="16"
    />
    <span
      className="CardDatesAndStats__itemText"
    >
      123 сохранили
    </span>
  </div>
  <div
    className="CardDatesAndStats__item CardDatesAndStats__item_daysLeft"
    key="days_left"
    title="Количество дней до снятия объявления"
  >
    <span>
      <DaysLeft
        className=""
        timestamp="2020-04-20"
        type="no-prefix"
      />
       до снятия
    </span>
  </div>
</div>
`;

exports[`для владельца если у объявы не подключено автопродление, напишет "до снятия" 1`] = `
<div
  className="CardDatesAndStats"
>
  <div
    className="CardDatesAndStats__item CardDatesAndStats__item_daysLeft"
    key="days_left"
    title="Количество дней до снятия объявления"
  >
    <span>
      <DaysLeft
        className=""
        timestamp="2020-04-20"
        type="no-prefix"
      />
       до снятия
    </span>
  </div>
</div>
`;

exports[`для владельца если у объявы подключено автопродление размещения, напишет "до продления" 1`] = `
<div
  className="CardDatesAndStats"
>
  <div
    className="CardDatesAndStats__item CardDatesAndStats__item_daysLeft"
    key="days_left"
    title="Количество дней до снятия объявления"
  >
    <span>
      <DaysLeft
        className=""
        timestamp="2020-04-20"
        type="no-prefix"
      />
       до продления
    </span>
  </div>
</div>
`;

exports[`должен отрендерить дату без количества происмотров, если нет данных 1`] = `
<div
  className="CardDatesAndStats"
>
  <div
    className="CardDatesAndStats__item CardDatesAndStats__item_creationDate"
    key="creation_date"
    title="Дата размещения объявления 11 апреля, Москва"
  >
    <span
      className="CardDatesAndStats__creationDateText"
    >
      11 апреля
      , Москва
    </span>
  </div>
</div>
`;

exports[`должен отрендерить дату и количество происмотров, если есть данные 1`] = `
<div
  className="CardDatesAndStats"
>
  <div
    className="CardDatesAndStats__item CardDatesAndStats__item_creationDate"
    key="creation_date"
    title="Дата размещения объявления 11 апреля, Москва"
  >
    <span
      className="CardDatesAndStats__creationDateText"
    >
      11 апреля
      , Москва
    </span>
  </div>
  <div
    className="CardDatesAndStats__item CardDatesAndStats__item_views"
    key="views"
    title="Количество просмотров"
  >
    <IconSvg
      id="svgID"
      size="16"
    />
    <span>
      20 (10 сегодня)
    </span>
  </div>
</div>
`;
